[ADD] Add config structure.

--- a/event.yml
+++ b/event.yml
@@ -1,12 +1,7 @@
-#
-# Event fock
-#
 # new event (for v3.0.9 - late )
-eccube.event.route.product_detail.response:
-    - [onRouterProductsDetailResponse, NORMAL]
+Product/detail.twig:
+    - [onProductDetailRender, NORMAL]
 
 # deprecated event (for v3.0.0 - 3.0.8)
 eccube.event.render.product_detail.before:
     - [onRenderProductsDetailBefore, NORMAL]
-
-
