--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,31 +37,32 @@ install:
   - git clone https://github.com/EC-CUBE/ec-cube.git %BASE_DIR%
   - cd %BASE_DIR%
   # checkout version
-  #- sh -c "if [ ! '%ECCUBE_VERSION%' = 'master' ]; then  git checkout -b %ECCUBE_VERSION% refs/tags/%ECCUBE_VERSION%; fi"
+  - sh -c "if [ ! '%ECCUBE_VERSION%' = 'master' ]; then  git checkout %ECCUBE_VERSION%; fi"
+  - git log --oneline -n 5
   # Set MySQL.
   - cp tests/my.cnf c:\
   - SET PATH=C:\Program Files\MySql\MySQL Server 5.7\bin\;%PATH%
-  - cinst php -version 5.6.17 --allow-empty-checksums
-  - SET PATH=C:\tools\php\;%PATH%
-  - copy C:\tools\php\php.ini-production C:\tools\php\php.ini
-  - echo date.timezone="Asia/Tokyo" >> C:\tools\php\php.ini
-  - echo extension_dir=ext >> C:\tools\php\php.ini
-  - echo extension=php_openssl.dll >> C:\tools\php\php.ini
-  - echo extension=php_gd2.dll >> C:\tools\php\php.ini
-  - echo extension=php_mbstring.dll >> C:\tools\php\php.ini
-  - echo extension=php_pgsql.dll >> C:\tools\php\php.ini
-  - echo extension=php_pdo_mysql.dll >> C:\tools\php\php.ini
-  - echo extension=php_pdo_pgsql.dll >> C:\tools\php\php.ini
-  - echo extension=php_curl.dll >> C:\tools\php\php.ini
-  - echo extension=php_fileinfo.dll >> C:\tools\php\php.ini
-  - echo output_buffering = Off >> C:\tools\php\php.ini
-  - echo default_charset = UTF-8 >> C:\tools\php\php.ini
-  - echo mbstring.language = Japanese >> C:\tools\php\php.ini
-  - echo mbstring.encoding_translation = On >> C:\tools\php\php.ini
-  - echo mbstring.http_input = UTF-8 >> C:\tools\php\php.ini
-  - echo mbstring.http_output = pass >> C:\tools\php\php.ini
-  - echo mbstring.internal_encoding = UTF-8 >> C:\tools\php\php.ini
-  - echo memory_limit = 512M >> C:\tools\php\php.ini
+  - cinst php -version 5.6.35 --allow-empty-checksums
+  - SET PATH=C:\tools\php56\;%PATH%
+  - copy C:\tools\php56\php.ini-production C:\tools\php56\php.ini
+  - echo date.timezone="Asia/Tokyo" >> C:\tools\php56\php.ini
+  - echo extension_dir=ext >> C:\tools\php56\php.ini
+  - echo extension=php_openssl.dll >> C:\tools\php56\php.ini
+  - echo extension=php_gd2.dll >> C:\tools\php56\php.ini
+  - echo extension=php_mbstring.dll >> C:\tools\php56\php.ini
+  - echo extension=php_pgsql.dll >> C:\tools\php56\php.ini
+  - echo extension=php_pdo_mysql.dll >> C:\tools\php56\php.ini
+  - echo extension=php_pdo_pgsql.dll >> C:\tools\php56\php.ini
+  - echo extension=php_curl.dll >> C:\tools\php56\php.ini
+  - echo extension=php_fileinfo.dll >> C:\tools\php56\php.ini
+  - echo output_buffering = Off >> C:\tools\php56\php.ini
+  - echo default_charset = UTF-8 >> C:\tools\php56\php.ini
+  - echo mbstring.language = Japanese >> C:\tools\php56\php.ini
+  - echo mbstring.encoding_translation = On >> C:\tools\php56\php.ini
+  - echo mbstring.http_input = UTF-8 >> C:\tools\php56\php.ini
+  - echo mbstring.http_output = pass >> C:\tools\php56\php.ini
+  - echo mbstring.internal_encoding = UTF-8 >> C:\tools\php56\php.ini
+  - echo memory_limit = 512M >> C:\tools\php56\php.ini
   - php -r "readfile('http://getcomposer.org/installer');" | php
   - php composer.phar install --dev --no-interaction -o
 
