--- a/Resource/config/services.yaml
+++ b/Resource/config/services.yaml
@@ -1,4 +1,3 @@
 parameters:
-    review_regist_min: 1
-    review_regist_max: 30
-
+    product_review_regist_min: 1
+    product_review_regist_max: 30
