--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
-    colors="true"
-    bootstrap="../../../tests/bootstrap.php"
-    >
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/6.5/phpunit.xsd"
+         backupGlobals="false"
+         colors="true"
+         bootstrap="Tests/bootstrap.php"
+>
+    <php>
+        <ini name="error_reporting" value="-1" />
+        <env name="KERNEL_CLASS" value="Eccube\Kernel" />
+        <env name="APP_ENV" value="test" />
+        <env name="APP_DEBUG" value="1" />
+        <env name="SHELL_VERBOSITY" value="-1" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
+        <!-- define your env variables for the test env here -->
+    </php>
 
     <!-- テストの場所 -->
     <testsuites>
-        <testsuite name="EC-CUBE Test Suite">
+        <testsuite name="Plugin Test Suite">
             <directory>./Tests</directory>
         </testsuite>
     </testsuites>
 
+    <!-- 出力するログファイル
     <logging>
-        <log type="coverage-html" target="./reports/coverage.html"/>
+        <log type="coverage-clover" target="./reports/coverage.clover"/>
     </logging>
+    -->
 
-    
     <!-- カバーレージのターゲット -->
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
@@ -26,8 +37,12 @@
                 <directory suffix=".php">./Tests</directory>
                 <directory suffix=".php">./Resource</directory>
                 <file>./PluginManager.php</file>
-                <file>./log.php</file>
             </exclude>
         </whitelist>
     </filter>
+
+    <listeners>
+        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+        <listener class="\DAMA\DoctrineTestBundle\PHPUnit\PHPUnitListener" />
+    </listeners>
 </phpunit>
