--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
     PLUGIN_CODE=ProductReview4
     BRANCH=4.0
   matrix:
-    - DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+    - DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
     - DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
 
 before_install: &php_setup |
