--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "name": "ec-cube/ProductReview4",
     "version": "4.0.0",
+    "description": "商品レビュー管理プラグイン",
     "type": "eccube-plugin",
     "require": {
-        "ec-cube/plugin-installer": "~0.0.3"
+        "ec-cube/plugin-installer": "~0.0.6"
     },
     "extra": {
         "code": "ProductReview4"
