--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,8 @@ environment:
     DBUSER: "root"
     BASE_DIR: "C:/projects/ec-cube"
     PLUGIN_BASE_DIR: "C:/projects/ProductReview-plugin"
-    ECCUBE_VERSION: "master"
+    ECCUBE_VERSION: "3.0"
+    BRANCH: "3.0"
     PLUGIN_CODE: "ProductReview"
   matrix:
   - db: mysql
@@ -37,7 +38,7 @@ install:
   - git clone https://github.com/EC-CUBE/ec-cube.git %BASE_DIR%
   - cd %BASE_DIR%
   # checkout version
-  #- sh -c "if [ ! '%ECCUBE_VERSION%' = 'master' ]; then  git checkout -b %ECCUBE_VERSION% refs/tags/%ECCUBE_VERSION%; fi"
+  - git checkout -b %BRANCH% origin/%BRANCH%
   # Set MySQL.
   - cp tests/my.cnf c:\
   - SET PATH=C:\Program Files\MySql\MySQL Server 5.7\bin\;%PATH%
