--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,19 @@ php:
   - 7.2
 
 env:
+  matrix:
+  - ECCUBE_VERSION=4.0 DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
+  - ECCUBE_VERSION=4.0 DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+  - ECCUBE_VERSION=4.0.0 DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
+  - ECCUBE_VERSION=4.0.0 DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+  - ECCUBE_VERSION=4.0.1 DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
+  - ECCUBE_VERSION=4.0.1 DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+  #    - ECCUBE_VERSION=4.0.2 DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
+  #    - ECCUBE_VERSION=4.0.2 DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+
   # plugin code
   global:
     PLUGIN_CODE=ProductReview4
-    BRANCH=4.0
-  matrix:
-    - DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
-    - DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
 
 before_install: &php_setup |
   phpenv config-rm xdebug.ini || true
@@ -31,7 +37,8 @@ install_eccube: &install_eccube |
   tar cvzf ${HOME}/${PLUGIN_CODE}.tar.gz ./*
   git clone https://github.com/EC-CUBE/ec-cube.git
   cd ec-cube
-  git checkout -b ${BRANCH} origin/${BRANCH}
+  sh -c "if [ '${ECCUBE_VERSION}' = '4.0' ];   then git checkout origin/${ECCUBE_VERSION}; fi"
+  sh -c "if [ ! '${ECCUBE_VERSION}' = '4.0' ]; then git checkout refs/tags/${ECCUBE_VERSION}; fi"
   composer selfupdate
   composer install --dev --no-interaction -o --apcu-autoloader
 
@@ -48,7 +55,8 @@ install:
   - *eccube_setup
 
 script:
-  - ./bin/phpunit app/Plugin/${PLUGIN_CODE}/Tests
+  -  ./vendor/bin/phpunit app/Plugin/${PLUGIN_CODE}/Tests;
+
 after_script:
   # disable plugin
   - bin/console eccube:plugin:disable --code=${PLUGIN_CODE}
