--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ env:
     - ECCUBE_VERSION=4.0.2 DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
     - ECCUBE_VERSION=4.0.3 DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
     - ECCUBE_VERSION=4.0.3 DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+    - ECCUBE_VERSION=4.1 DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
+    - ECCUBE_VERSION=4.1 DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
 matrix:
   exclude:
     - php: 7.3
@@ -66,7 +68,7 @@ matrix:
       env: ECCUBE_VERSION=4.0.3 DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
     - php: 7.4
       env: ECCUBE_VERSION=4.0.3 DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
-    
+
 before_install: &php_setup |
   phpenv config-rm xdebug.ini || true
   echo "opcache.enable_cli=1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
@@ -74,12 +76,13 @@ before_install: &php_setup |
   echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
 install_eccube: &install_eccube |
+  sh -c "if [ ! '${ECCUBE_VERSION}' = '4.1' ]; then  composer selfupdate --1; fi"
+  sh -c "if [ '${ECCUBE_VERSION}' = '4.1' ]; then  composer selfupdate; fi"
   tar cvzf ${HOME}/${PLUGIN_CODE}.tar.gz ./*
   git clone https://github.com/EC-CUBE/ec-cube.git
   cd ec-cube
-  sh -c "if [ '${ECCUBE_VERSION}' = '4.0' ];   then git checkout origin/${ECCUBE_VERSION}; fi"
+  sh -c "if [ '${ECCUBE_VERSION}' = '4.0' ] || [ '${ECCUBE_VERSION}' = '4.1' ];   then git checkout origin/${ECCUBE_VERSION}; fi"
   sh -c "if [ ! '${ECCUBE_VERSION}' = '4.0' ]; then git checkout refs/tags/${ECCUBE_VERSION}; fi"
-  composer selfupdate
   composer install --dev --no-interaction -o --apcu-autoloader
 
 eccube_setup: &eccube_setup |
@@ -93,9 +96,18 @@ eccube_setup: &eccube_setup |
 install:
   - *install_eccube
   - *eccube_setup
+  - composer require --dev kiy0taka/eccube4-test-fixer
 
-script:
-  -  ./vendor/bin/phpunit app/Plugin/${PLUGIN_CODE}/Tests;
+script: |
+   if [[ ! $ECCUBE_VERSION = '4.1' ]]
+   then
+     find app/Plugin/${PLUGIN_CODE}/Tests -name "*Test.php" | while read TESTCASE
+     do
+       ./vendor/bin/phpunit --include-path vendor/kiy0taka/eccube4-test-fixer/src --loader 'Eccube\PHPUnit\Loader\Eccube4CompatTestSuiteLoader' ${TESTCASE}
+     done
+   else
+     ./vendor/bin/phpunit app/Plugin/${PLUGIN_CODE}/Tests
+   fi
 
 after_script:
   # disable plugin
