--- a/.travis.yml
+++ b/.travis.yml
@@ -73,13 +73,18 @@ before_install: &php_setup |
   echo "apc.enable_cli=1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
+# composer.jsonが存在しないディレクトリで実行
+setup_composer: &setup_composer |
+  cd ..
+  composer selfupdate --1
+  cd -
+
 install_eccube: &install_eccube |
   tar cvzf ${HOME}/${PLUGIN_CODE}.tar.gz ./*
   git clone https://github.com/EC-CUBE/ec-cube.git
   cd ec-cube
   sh -c "if [ '${ECCUBE_VERSION}' = '4.0' ];   then git checkout origin/${ECCUBE_VERSION}; fi"
   sh -c "if [ ! '${ECCUBE_VERSION}' = '4.0' ]; then git checkout refs/tags/${ECCUBE_VERSION}; fi"
-  composer selfupdate --1
   composer install --dev --no-interaction -o --apcu-autoloader
 
 eccube_setup: &eccube_setup |
@@ -91,6 +96,7 @@ eccube_setup: &eccube_setup |
   bin/console eccube:plugin:enable --code=${PLUGIN_CODE}
 
 install:
+  - *setup_composer
   - *install_eccube
   - *eccube_setup
 
