--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "ec-cube/productreview4",
-    "version": "4.1.0",
+    "name": "ec-cube/productreview42",
+    "version": "4.2.0",
     "description": "商品レビュー管理プラグイン",
     "type": "eccube-plugin",
     "require": {
-        "ec-cube/plugin-installer": "~0.0.6 || ^2.0"
+        "ec-cube/plugin-installer": "^2.0"
     },
     "extra": {
-        "code": "ProductReview4"
+        "code": "ProductReview42"
     }
 }
