--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,15 @@ jobs:
           - db: mysql
             database_url: mysql://root:password@127.0.0.1:3306/eccube_db
             database_server_version: 5.7
+            database_charset: utf8mb4
           - db: mysql8
             database_url: mysql://root:password@127.0.0.1:3308/eccube_db
             database_server_version: 8
+            database_charset: utf8mb4
           - db: pgsql
             database_url: postgres://postgres:password@127.0.0.1:5432/eccube_db
             database_server_version: 14
+            database_charset: utf8
     services:
       mysql:
         image: mysql:5.7
@@ -110,6 +113,7 @@ jobs:
           APP_DEBUG: 0
           DATABASE_URL: ${{ matrix.database_url }}
           DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
+          DATABASE_CHARSET: ${{ matrix.database_charset }}
         working-directory: 'ec-cube'
         run: |
           bin/console doctrine:database:create
@@ -121,6 +125,7 @@ jobs:
           APP_DEBUG: 0
           DATABASE_URL: ${{ matrix.database_url }}
           DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
+          DATABASE_CHARSET: ${{ matrix.database_charset }}
           PLUGIN_CODE: ${{ matrix.plugin_code }}
         working-directory: 'ec-cube'
         run: |
@@ -133,6 +138,7 @@ jobs:
           APP_DEBUG: 0
           DATABASE_URL: ${{ matrix.database_url }}
           DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
+          DATABASE_CHARSET: ${{ matrix.database_charset }}
           PLUGIN_CODE: ${{ matrix.plugin_code }}
         working-directory: 'ec-cube'
         run: |
@@ -146,6 +152,7 @@ jobs:
           APP_DEBUG: 0
           DATABASE_URL: ${{ matrix.database_url }}
           DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
+          DATABASE_CHARSET: ${{ matrix.database_charset }}
           PLUGIN_CODE: ${{ matrix.plugin_code }}
         run: bin/console eccube:plugin:disable --code=${PLUGIN_CODE}
 
@@ -155,6 +162,7 @@ jobs:
           APP_DEBUG: 0
           DATABASE_URL: ${{ matrix.database_url }}
           DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
+          DATABASE_CHARSET: ${{ matrix.database_charset }}
           PLUGIN_CODE: ${{ matrix.plugin_code }}
         working-directory: 'ec-cube'
         run: bin/console eccube:plugin:uninstall --code=${PLUGIN_CODE}
