--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,13 @@ on:
 jobs:
   run-on-linux:
     name: Run on Linux
-    runs-on: ${{ matrix.operating-system }}
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ ubuntu-18.04 ]
-        php: [ '7.4', '8.0', '8.1' ]
+        eccube_version: [ '4.2', '4.3' ]
+        php: [ '7.4', '8.0', '8.1', '8.2', '8.3' ]
         db: [ 'mysql', 'mysql8', 'pgsql' ]
-        eccube_version: [ '4.2' ]
         plugin_code: [ 'ProductReview42' ]
         include:
           - db: mysql
@@ -39,6 +38,16 @@ jobs:
             database_url: postgres://postgres:password@127.0.0.1:5432/eccube_db
             database_server_version: 14
             database_charset: utf8
+        exclude:
+          - eccube_version: 4.2
+            php: 8.2
+          - eccube_version: 4.2
+            php: 8.3
+          - eccube_version: 4.3
+            php: 7.4
+          - eccube_version: 4.3
+            php: 8.0
+
     services:
       mysql:
         image: mysql:5.7
@@ -72,7 +81,6 @@ jobs:
           - 1080:1080
           - 1025:1025
     steps:
-      - run: sudo apt-get purge -y hhvm
       - name: Checkout
         uses: actions/checkout@v2
 
